Fix settings sidebar overflow in some cases

--- a/src/resources/src/scss/postie.scss
+++ b/src/resources/src/scss/postie.scss
@@ -10,10 +10,10 @@
 // Postie Settings
 // ==========================================================================
 
-.postie-settings-tabs li {
-    width: 100%;
-    max-width: 100% !important;
-}
+// .postie-settings-tabs li {
+//     width: 100%;
+//     max-width: 100% !important;
+// }
 
 .postie-settings-tabs .postie-provider-icon {
     width: 20px;
